src/test/deca/codegen/invalid/improvided/AbsenceReturn.deca
class A {

int m(){

}
}

{
A d = new A();
int x = d.m();

}
